# rust-todo-rest

./: .gitignore  Cargo.toml  README.md  rocket.toml
fizzbuzz_actor/: Cargo.toml
fizzbuzz_actor/src/: main.rs
src/: domain.rs  lib.rs  main.rs
src/controllers/: mod.rs  todo_controller.rs  todo_create.rs  todo_update.rs
src/core/: mod.rs  todo.rs
src/rest/: mod.rs  todo_created_response.rs
tests/: integration_tests.rs
