workspace = { members = ["fizzbuzz_actor"] }
[package]
name = "rust-todo-rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde_json = "1.0.111"
serde = "1.0.195"
once_cell = "1.19.0"
log = "0.4.21"
env_logger = "0.11.3"
mockall = "0.12.1"

[dev-dependencies]
test-context = "0.1.4"
